# vkhack2018-shelter-hero

./: .gitignore  README.md  build.gradle  settings.gradle  versions.gradle
gradle/wrapper/: gradle-wrapper.properties
m-deps-c/: .gitignore  clone-repos.sh  make-grpc.sh  make-protobuf.sh  make.sh
m-ios-client/m-ios-client/: Podfile  my-location.gpx
m-ios-client/m-ios-client/m-ios-client/: AppDelegate.swift  ChatViewController.swift  FilterViewController.swift  Localizable.strings  MapController.swift  MapViewController.swift  ViewController.swift  WebViewController.swift
m-ios-client/m-ios-client/m-ios-client.xcodeproj/: project.pbxproj
m-ios-client/m-ios-client/m-ios-client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
m-ios-client/m-ios-client/m-ios-client.xcodeproj/xcshareddata/xcschemes/: m-ios-client.xcscheme
m-ios-client/m-ios-client/m-ios-client.xcworkspace/: contents.xcworkspacedata
m-ios-client/m-ios-client/m-ios-client/ApiLayer/: Auth.grpc.swift  Auth.pb.swift  General.pb.swift  MapObject.grpc.swift  MapObject.pb.swift  Order.grpc.swift  Order.pb.swift  Quests.grpc.swift  Quests.pb.swift  Shelter.pb.swift  ShelterQuestRecord.grpc.swift  ShelterQuestRecord.pb.swift  TokenProvider.swift  Venue.pb.swift
m-ios-client/m-ios-client/m-ios-client/Assets.xcassets/shelterIcon.imageset/: Contents.json
m-ios-client/m-ios-client/m-ios-client/Assets.xcassets/venue1.imageset/: Contents.json
m-ios-client/m-ios-client/m-ios-client/Common/: ApiConfig.swift  AuthController.swift  MapView.swift  UIColor.swift
m-ios-client/m-ios-client/m-ios-client/FiltersScreen/: FilterViewController.swift
m-ios-client/m-ios-client/m-ios-client/MapScreen/: MapController.swift  MapViewController.swift
m-ios-client/m-ios-client/m-ios-client/OrdersList/: OrderListController.swift  OrderListViewController.swift
m-ios-client/m-ios-client/m-ios-client/QuestDetails/: QuestDetailsViewController.swift  ShlterQuestRecordController.swift
m-ios-client/m-ios-client/m-ios-client/Quests/: QuestsSearchController.swift  QuestsSearchViewController.swift
m-ios-client/m-ios-client/m-ios-client/Resources/: Info.plist  Localizable.strings
m-ios-client/m-ios-client/m-ios-client/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
m-ios-client/m-ios-client/m-ios-client/Resources/Assets.xcassets/filters-icons/box-icon.imageset/: Contents.json
m-ios-client/m-ios-client/m-ios-client/Resources/Assets.xcassets/my-location.imageset/: Contents.json
m-ios-client/m-ios-client/m-ios-client/Resources/Assets.xcassets/small-location.imageset/: Contents.json
m-ios-client/m-ios-client/m-ios-client/SearchQuests/: QuestsSearchController.swift  QuestsSearchViewController.swift
m-protos/: Auth.proto  General.proto  MapObject.proto  Order.proto  Quests.proto  Recommendations.proto  Shelter.proto  ShelterQuestRecord.proto  Venue.proto  make.sh
m-server/: build.gradle
m-sh-c/make/: .gitignore  CMakeLists.txt  make.sh
m-sh-c/src/: MainRecommendations.cpp  MainRouting.cpp  MainTests.cpp
m-sh-c/src/recommendations/: HelperCommon.h  Numeric.cpp  Numeric.h  OrderPlanner.cpp  OrderPlanner.h  RecommendationsSearcher.cpp  RecommendationsSearcher.h  Routing.cpp  Routing.h  TimeWindowUtils.cpp  TimeWindowUtils.h  ToString.cpp  ToString.h
m-sh-c/src/rpc/: HelperGrpc.h  RecommendationsHandler.cpp  RecommendationsHandler.h
m-web-ui/pages/: forms.html  index.html  tables.html
(+31 files in other folders)
